// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/keepKeysFromExpected ignoreExtraFields: false, ignoreExtraArrayItems: false 1`] = `
{
  "extra": "extra",
  "extraNull": null,
  "extraUndefined": undefined,
  "field": "value",
  "items": [
    {
      "items": [
        {
          "extra": "extra1",
          "name": "subitem1",
        },
        {
          "extra": "extra2",
          "extraNull": null,
          "extraUndefined": undefined,
          "name": "subitem2",
          "null": null,
          "undefined": undefined,
        },
        null,
        undefined,
      ],
      "name": "item1",
    },
    {
      "name": "item2",
    },
    {
      "name": "item3",
    },
    {
      "name": null,
    },
    {
      "name": undefined,
    },
    null,
    undefined,
    {
      "name": "item4",
    },
    {
      "name": null,
    },
    {
      "name": undefined,
    },
  ],
  "null": null,
  "undefined": undefined,
}
`;

exports[`utils/keepKeysFromExpected ignoreExtraFields: false, ignoreExtraArrayItems: true 1`] = `
{
  "extra": "extra",
  "extraNull": null,
  "extraUndefined": undefined,
  "field": "value",
  "items": [
    {
      "items": [
        {
          "extra": "extra1",
          "name": "subitem1",
        },
      ],
      "name": "item1",
    },
    {
      "name": "item2",
    },
    {
      "name": "item3",
    },
    {
      "name": null,
    },
    {
      "name": undefined,
    },
    null,
    undefined,
  ],
  "null": null,
  "undefined": undefined,
}
`;

exports[`utils/keepKeysFromExpected ignoreExtraFields: true, ignoreExtraArrayItems: false 1`] = `
{
  "field": "value",
  "items": [
    {
      "items": [
        {
          "name": "subitem1",
        },
        {
          "extra": "extra2",
          "extraNull": null,
          "extraUndefined": undefined,
          "name": "subitem2",
          "null": null,
          "undefined": undefined,
        },
        null,
        undefined,
      ],
      "name": "item1",
    },
    {
      "name": "item2",
    },
    {
      "name": "item3",
    },
    {
      "name": null,
    },
    {
      "name": undefined,
    },
    null,
    undefined,
    {
      "name": "item4",
    },
    {
      "name": null,
    },
    {
      "name": undefined,
    },
  ],
  "null": null,
  "undefined": undefined,
}
`;

exports[`utils/keepKeysFromExpected ignoreExtraFields: true, ignoreExtraArrayItems: true 1`] = `
{
  "field": "value",
  "items": [
    {
      "items": [
        {
          "name": "subitem1",
        },
      ],
      "name": "item1",
    },
    {
      "name": "item2",
    },
    {
      "name": "item3",
    },
    {
      "name": null,
    },
    {
      "name": undefined,
    },
    null,
    undefined,
  ],
  "null": null,
  "undefined": undefined,
}
`;
